--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "author": "Pedro Martin <pataruco@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/node": "^12.0.8",
     "@types/webpack": "^4.4.32",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-prettier": "^3.1.0",
+    "css-loader": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^2.4.1",
     "jest": "^24.8.0",
     "lint-staged": "^8.2.1",
+    "mini-css-extract-plugin": "^0.7.0",
     "prettier": "^1.18.2",
+    "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
@@ -41,15 +41,13 @@
       "*.{js,json,yml,md}": [
         "./node_modules/.bin/prettier --write"
       ],
-      "*.js": [
-        "./node_modules/.bin/eslint --fix"
-      ],
       "*.{ts,ts}": [
         "yarn lint"
-      ],
-      "*.tf": [
-        "bash -c 'terraform fmt -check'"
       ]
     }
+  },
+  "dependencies": {
+    "@types/mini-css-extract-plugin": "^0.2.1",
+    "normalize.css": "^8.0.1"
   }
 }
