--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "prettier": "^1.18.2",
     "style-loader": "^0.23.1",
+    "svg-url-loader": "^2.3.3",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.3",
     "ts-node": "^8.3.0",
