--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Pedro Martin <pataruco@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/googlemaps": "^3.36.5",
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/mini-css-extract-plugin": "^0.2.1",
     "@types/node": "^12.0.8",
     "@types/webpack": "^4.4.32",
     "css-loader": "^3.0.0",
@@ -51,7 +53,6 @@
     }
   },
   "dependencies": {
-    "@types/mini-css-extract-plugin": "^0.2.1",
     "normalize.css": "^8.0.1"
   }
 }
