--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/googlemaps": "^3.36.5",
+    "@types/hapi__joi": "^15.0.2",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.1",
     "@types/node": "^12.0.8",
@@ -53,6 +54,7 @@
     }
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
     "normalize.css": "^8.0.1"
   }
 }
