--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.1",
     "@types/node": "^12.0.8",
+    "@types/optimize-css-assets-webpack-plugin": "^1.3.4",
+    "@types/terser-webpack-plugin": "^1.2.1",
     "@types/webpack": "^4.4.32",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -18,9 +20,11 @@
     "jest": "^24.8.0",
     "lint-staged": "^8.2.1",
     "mini-css-extract-plugin": "^0.7.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.18.2",
     "style-loader": "^0.23.1",
     "svg-url-loader": "^2.3.3",
+    "terser-webpack-plugin": "^1.3.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.3",
     "ts-node": "^8.3.0",
