--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/terser-webpack-plugin": "^1.2.1",
     "@types/webpack": "^4.4.32",
     "css-loader": "^3.0.0",
+    "favicons-webpack-plugin": "^0.0.9",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.4.1",
     "jest": "^24.8.0",
