--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Pedro Martin <pataruco@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/convict": "^4.2.1",
     "@types/googlemaps": "^3.36.5",
     "@types/hapi__joi": "^15.0.2",
     "@types/html-webpack-plugin": "^3.2.0",
@@ -14,6 +15,7 @@
     "@types/optimize-css-assets-webpack-plugin": "^1.3.4",
     "@types/terser-webpack-plugin": "^1.2.1",
     "@types/webpack": "^4.4.32",
+    "convict": "^5.0.0",
     "css-loader": "^3.0.0",
     "favicons-webpack-plugin": "^0.0.9",
     "html-webpack-plugin": "^3.2.0",
