--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,14 @@
 {
-  "extends": ["airbnb-base", "prettier", "plugin:prettier/recommended"],
   "env": {
-    "jest": true
+    "browser": true,
+    "es2021": true
   },
-  "overrides": [
-    {
-      "excludedFiles": ["dist/*.js"]
-    }
-  ]
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
+  "rules": {}
 }
