--- a/package.json
+++ b/package.json
@@ -6,44 +6,33 @@
   "author": "Pedro Martin <pataruco@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/convict": "^4.2.1",
-    "@types/googlemaps": "^3.37.7",
-    "@types/hapi__joi": "^15.0.4",
-    "@types/html-webpack-plugin": "^3.2.1",
-    "@types/mini-css-extract-plugin": "^0.8.0",
-    "@types/node": "^12.7.8",
-    "@types/optimize-css-assets-webpack-plugin": "^5.0.0",
-    "@types/terser-webpack-plugin": "^1.2.1",
-    "@types/webpack": "^4.39.2",
-    "convict": "^5.1.0",
-    "css-loader": "^3.2.0",
-    "favicons-webpack-plugin": "^1.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.7",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.4.1",
-    "mini-css-extract-plugin": "^0.8.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "prettier": "^1.18.2",
-    "style-loader": "^1.0.0",
-    "svg-url-loader": "^3.0.2",
-    "terser-webpack-plugin": "^2.1.2",
-    "ts-jest": "^24.1.0",
-    "ts-loader": "^6.2.0",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.6.3",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "@types/hapi__joi": "^17.1.6",
+    "@types/mini-css-extract-plugin": "^1.4.3",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.3",
+    "@types/terser-webpack-plugin": "^5.0.3",
+    "@types/webpack-dev-server": "^3.11.4",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "convict": "^6.1.0",
+    "eslint": "^7.28.0",
+    "favicons-webpack-plugin": "^5.0.2",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.0",
+    "prettier": "^2.3.1",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "build": "webpack  --config ./config/webpack.config.prod.ts",
-    "start:dev": "webpack-dev-server --color --config ./config/webpack.config.dev.ts",
-    "lint": "yarn tslint"
+    "start:dev": "webpack serve --color --config ./config/webpack.config.dev.ts",
+    "postinstall": "husky install"
   },
   "husky": {
     "hooks": {
@@ -52,10 +41,11 @@
   },
   "lint-staged": {
     "*.{js,json,yml,md}": [
-      "./node_modules/.bin/prettier --write"
+      "yarn prettier --write"
     ],
-    "*.{ts,ts}": [
-      "yarn lint"
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
     ]
   },
   "dependencies": {
