--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "author": "Pedro Martin <pataruco@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/hapi__joi": "^17.1.6",
+    "@types/convict": "^6.0.2",
+    "@types/google.maps": "^3.45.1",
     "@types/mini-css-extract-plugin": "^1.4.3",
+    "@types/node": "^15.12.1",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.3",
     "@types/terser-webpack-plugin": "^5.0.3",
     "@types/webpack-dev-server": "^3.11.4",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "convict": "^6.1.0",
+    "css-loader": "^5.2.6",
     "eslint": "^7.28.0",
     "favicons-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.3.1",
@@ -22,6 +25,7 @@
     "mini-css-extract-plugin": "^1.6.0",
     "optimize-css-assets-webpack-plugin": "^6.0.0",
     "prettier": "^2.3.1",
+    "svg-url-loader": "^7.1.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2",
@@ -49,7 +53,7 @@
     ]
   },
   "dependencies": {
-    "@hapi/joi": "^16.1.4",
+    "joi": "^17.4.0",
     "normalize.css": "^8.0.1"
   }
 }
