--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/parser": "^4.26.0",
     "convict": "^6.1.0",
     "css-loader": "^5.2.6",
+    "dotenv": "^10.0.0",
     "eslint": "^7.28.0",
     "favicons-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.3.1",
@@ -35,7 +36,7 @@
   },
   "scripts": {
     "build": "webpack  --config ./config/webpack.config.prod.ts",
-    "start:dev": "webpack serve --color --config ./config/webpack.config.dev.ts",
+    "start": "source .env; webpack serve --color --config ./config/webpack.config.dev.ts",
     "postinstall": "husky install"
   },
   "husky": {
