--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   "license": "MIT",
   "devDependencies": {
     "@types/convict": "^6.0.2",
-    "@types/google.maps": "^3.45.1",
+    "@types/google.maps": "^3.45.2",
     "@types/mini-css-extract-plugin": "^1.4.3",
-    "@types/node": "^15.12.1",
+    "@types/node": "^15.12.2",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.3",
     "@types/terser-webpack-plugin": "^5.0.3",
     "@types/webpack-dev-server": "^3.11.4",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "convict": "^6.1.0",
     "css-loader": "^5.2.6",
     "dotenv": "^10.0.0",
     "eslint": "^7.28.0",
+    "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
@@ -31,11 +32,11 @@
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "build": "webpack  --config ./config/webpack.config.prod.ts",
+    "build": "source .env; webpack  --config ./config/webpack.config.prod.ts",
     "start": "source .env; webpack serve --color --config ./config/webpack.config.dev.ts",
     "postinstall": "husky install"
   },
