--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "build": "source .env; webpack  --config ./config/webpack.config.prod.ts",
+    "build:local": "source .env; webpack  --config ./config/webpack.config.prod.ts",
+    "build": "webpack  --config ./config/webpack.config.prod.ts",
     "start": "source .env; webpack serve --color --config ./config/webpack.config.dev.ts",
     "postinstall": "husky install"
   },
