Add yarn install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           EVENT_ID: ${{ secrets.EVENT_ID }}
           REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
         run: |
-          yarn
+          yarn install
           yarn build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
